--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@
 	src: url('../fonts/Comfortaa/Comfortaa-Regular.woff') format('woff'), url('../fonts/Comfortaa/Comfortaa-Regular.ttf') format('truetype'), url('../fonts/Comfortaa/Comfortaa-Regular.svg') format('svg');
 }
 body {
-	background: #ededed url(../images/bg-header.gif) repeat-x top center;
+	//background: #ededed url(../images/bg-header.gif) repeat-x top center;
+        background: #ededed url(../images/bg-header2.png) repeat-x top center;
 	line-height: 1;
 	font-size: 14px;
 	font-family: Arial, Helvetica, sans-serif;
@@ -38,6 +39,7 @@ body {
 	padding: 60px 0 0 10px;
 	width: 324px;
 }
+/*
 #header .section .logo a {
 	background: url(../images/bg-logo.png) repeat-x top left;
 	color: #fff;
@@ -54,6 +56,7 @@ body {
 	text-transform: uppercase;
 	width: 270px;
 }
+*/
 #header .section ul {
 	display: inline-block;
 	float: right;
