--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/*Website Template by freewebsitetemplates.com*/
 @font-face {
 	font-family: 'Arimo-Bold';
 	src: url('../fonts/Arimo-Bold/Arimo-Bold.eot');
@@ -65,7 +64,7 @@ body {
 	padding: 114px 0 0;
 }
 #header .section ul li {
-	background: url(../images/bg-nav-right.gif) no-repeat top right;
+	/*background: url(../images/bg-nav-right.gif) no-repeat top right;*/
 	display: inline-block;
 	float: left;
 	list-style: none;
@@ -73,10 +72,10 @@ body {
 	padding: 0;
 }
 #header .section ul li a {
-	background: url(../images/bg-nav-left.gif) no-repeat top left;
-	color: #fff;
+	/*background: url(../images/bg-nav-left.gif) no-repeat top left;*/
+	color: #ffff00; 
 	display: inline-block;
-	font-size: 16px;
+	font-size: 20px;
 	height: 30px;
 	letter-spacing: 0.05em;
 	line-height: 30px;
@@ -90,10 +89,12 @@ body {
 	color: #ccc;
 }
 #header .section ul li.selected {
-	background: url(../images/bg-nav-right-selected.gif) no-repeat top right;
+	/*background: url(../images/bg-nav-right-selected.gif) no-repeat top right;*/
 }
 #header .section ul li.selected a {
-	background: url(../images/bg-nav-left-selected.gif) no-repeat top left;
+	/*background: url(../images/bg-nav-left-selected.gif) no-repeat top left;*/
+	color: #00CC00;
+	font-weight: bold;
 }
 #header .article {
 	background: #fff;
