PHP Login Form Fixed
The login form is now fully fixed. Resolved the issue of PHP code not
running and instead displaying. This was because login was saved as
.html not as .php. Also removed an extra file. The login system now is
fully functional. Home member page now displays number of credits.

--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,11 @@ body {
 #body .sidebar ul li p a:hover {
 	color: #4c8f97;
 }
+
+.err{
+    color: #FF0000;
+    text-decoration: underline;
+}
 #footer {
 	background: #4c8f96;
 	border-top: 1px solid #9bd9e0;
