--- a/css/style.css
+++ b/css/style.css
@@ -1,632 +1,403 @@
+/* Website template by freewebsitetemplates.com */
 @font-face {
-	font-family: 'Arimo-Bold';
-	src: url('../fonts/Arimo-Bold/Arimo-Bold.eot');
-	src: url('../fonts/Arimo-Bold/Arimo-Bold.woff') format('woff'), url('../fonts/Arimo-Bold/Arimo-Bold.ttf') format('truetype'), url('../fonts/Arimo-Bold/Arimo-Bold.svg') format('svg');
+	font-family: 'OpenSans';
+	src: url('../fonts/OpenSans-Regular.eot');
+	src: local('☺'), url('../fonts/OpenSans-Regular.woff') format('woff'), url('../fonts/OpenSans-Regular.ttf') format('truetype'), url('../fonts/OpenSans-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 @font-face {
-	font-family: 'ChangaOne';
-	src: url('../fonts/ChangaOne/ChangaOne-Regular.eot');
-	src: url('../fonts/ChangaOne/ChangaOne-Regular.woff') format('woff'), url('../fonts/ChangaOne/ChangaOne-Regular.ttf') format('truetype'), url('../fonts/ChangaOne/ChangaOne-Regular.svg') format('svg');
-}
-@font-face {
-	font-family: 'Comfortaa-Regular';
-	src: url('../fonts/Comfortaa/Comfortaa-Regular.eot');
-	src: url('../fonts/Comfortaa/Comfortaa-Regular.woff') format('woff'), url('../fonts/Comfortaa/Comfortaa-Regular.ttf') format('truetype'), url('../fonts/Comfortaa/Comfortaa-Regular.svg') format('svg');
+	font-family: 'Play';
+	src: url('../fonts/Play-Regular.eot');
+	src: local('☺'), url('../fonts/Play-Regular.woff') format('woff'), url('../fonts/Play-Regular.ttf') format('truetype'), url('../fonts/Play-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 body {
-	//background: #ededed url(../images/bg-header.gif) repeat-x top center;
-        background: #ededed url(../images/bg-header2.png) repeat-x top center;
-	line-height: 1;
-	font-size: 14px;
-	font-family: Arial, Helvetica, sans-serif;
+	background-color: #fff;
+	font-family: 'OpenSans';
 	margin: 0;
-	padding: 0;
 }
-#header {
-	margin: 0 auto;
-	padding: 0;
-	width: 960px;
+img {
+	border: 0;
 }
-#header .section {
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
+.clearfix:after, #contents:after {
+	clear:both;
+	content:"";
+	display:block;
+	height:1%;
+	line-height:0;
+	visibility:hidden;
 }
-#header .section .logo {
-	float: left;
-	margin: 0;
-	padding: 60px 0 0 10px;
-	width: 324px;
-}
-/*
-#header .section .logo a {
-	background: url(../images/bg-logo.png) repeat-x top left;
+.btn {
+	background: url(../images/bg-button.png) no-repeat;
+	background-position: 0 -70px;
 	color: #fff;
-	display: block;
-	font-family: 'Arimo-Bold';
-	font-size: 60px;
-	font-weight: normal;
-	height: 130px;
-	line-height: 130px;
-	margin: 0;
-	padding: 0;
-	text-align:center;
-	text-decoration: none;
-	text-transform: uppercase;
-	width: 270px;
-}
-*/
-#header .section ul {
 	display: inline-block;
-	float: right;
-	margin: 0;
-	overflow: hidden;
-	padding: 114px 0 0;
-}
-#header .section ul li {
-	/*background: url(../images/bg-nav-right.gif) no-repeat top right;*/
-	display: inline-block;
-	float: left;
-	list-style: none;
-	margin: 0 10px;
-	padding: 0;
-}
-#header .section ul li a {
-	/*background: url(../images/bg-nav-left.gif) no-repeat top left;*/
-	color: #ffff00; 
-	display: inline-block;
-	font-size: 20px;
-	height: 30px;
-	letter-spacing: 0.05em;
-	line-height: 30px;
-	margin: 0;
-	padding: 0 15px;
+	font: 24px/60px 'OpenSans';
+	height: 60px;
+	width: 230px;
 	text-align: center;
 	text-decoration: none;
 	text-transform: uppercase;
 }
-#header .section ul li a:hover {
-	color: #ccc;
+.btn:hover {
+	background-position: 0 0;
 }
-#header .section ul li.selected {
-	/*background: url(../images/bg-nav-right-selected.gif) no-repeat top right;*/
+/*------------------------------ HEADER ------------------------------*/
+#header {
+	background-color: #eee;
+	border-bottom: 1px solid #e6e6e6;
+	padding: 27px 0;
 }
-#header .section ul li.selected a {
-	/*background: url(../images/bg-nav-left-selected.gif) no-repeat top left;*/
-	color: #00CC00;
-	font-weight: bold;
-}
-#header .article {
-	background: #fff;
-	border: 2px solid #5fb3bd;
-	border-radius: 4px;
-	margin: 50px auto 28px;
-	overflow: hidden;
-	padding: 0;
-	width: 936px;
-}
-#header .article img {
-	display: block;
-	float: left;
-	margin: 0 50px 0 0;
-	padding: 0;
-}
-#header .article h1 {
-	color: #1b2130;
-        text-align: center;
-	font-family: 'ChangaOne';
-	font-size: 40px;
-	font-weight: normal;
-	margin: 0;
-	line-height: 50px;
-	padding: 110px 30px 30px;
-}
-
-#header .article h6 {
-    
-}
-#body {
+#header > div, #footer > div {
+	width: 920px;
 	margin: 0 auto;
-	min-height: 812px;
-	padding: 20px 0 50px;
-	width: 960px;
+	padding: 0 20px;
 }
-#body > ul {
-	margin: 0;
-	overflow: hidden;
-	padding: 0;
-}
-#body > ul li {
+/** Logo **/
+#header .logo {
 	float: left;
-	list-style: none;
-	margin: 0 10px;
-	padding: 0;
-	width: 220px;
+	margin-right: 20px;
 }
-#body > ul li > a {
-	background: url(../images/frame.png) no-repeat center top;
-	display: block;
-	margin: 0;
-	padding: 5px 5px 29px;
-}
-#body > ul li > a:hover {
-	opacity: 0.9;
-}
-#body > ul li > a img {
-	border: 0;
-	display: block;
-	margin: 0;
-	padding: 0;
-}
-#body > ul li b {
+#header .logo a {
+	background: url(../images/logo.png) no-repeat center top;
 	color: #000;
 	display: block;
-	font-size: 18px;
-	font-weight: normal;
-	margin: 0;
-	padding: 10px 0 5px;
-	text-transform: capitalize;
+	font: 15px/30px 'Play';
+	height: 20px;
+	width: 76px;
+	padding-top: 68px;
+	text-decoration: none;
+	text-transform: uppercase;
 }
-#body > ul li p {
-	color: #464646;
-	font-size: 12px;
-	line-height: 24px;
-	margin: 0;
-	padding: 0;
-}
-#body > ul li p a {
-	color: #464646;
-	text-decoration: underline;
-}
-#body > ul li p a:hover {
-	color: #252525;
-}
-#body > div {
-	margin: 0;
-	overflow: hidden;
-	padding: 50px 0 0;
-}
-#body > .more {
-	color: #464646;
-	display: block;
-	font-size: 13px;
-	margin: 0 auto;
-	padding: 0;
-	text-align: center;
-	text-decoration: underline;
-	text-transform: capitalize;
-	width: 80px;
-}
-#body > .more:hover {
-	color: #4a8b92;
-}
-#body h2 {
-	background: url(../images/bg-featured.png) repeat-x;
-	color: #fff;
-	font-family: 'Comfortaa-Regular';
-	font-size: 20px;
-	font-weight: normal;
-	height: 47px;
-	letter-spacing: 0.1em;
-	left: 15px;
-	line-height: 47px;
-	margin: 0;
-	padding: 0 25px;
-	position: absolute;
-	text-transform: capitalize;
-	top: -14px;
-}
-#body h3 {
-	color: #2f394e;
-	margin: 0;
-	padding: 0;
-	font-size: 20px;
-	font-weight: normal;
-	margin: 0;
-	padding: 25px 10px 40px;
-	text-transform: capitalize;
-}
-#body > b {
-	color: #2f394e;
+/** Navigation **/
+#navigation {
 	display: inline-block;
-	font-size: 18px;
-	font-weight: normal;
+	list-style: none;
+	line-height: 100px;
 	margin: 0;
-	padding: 0 10px;
-	text-transform: capitalize;
-}
-#body > p {
-	color: #464646;
-	font-size: 13px;
-	line-height: 24px;
-	margin: 0;
-	padding: 30px 10px;
-}
-#body > p a {
-	color: #464646;
-	text-decoration: underline;
-}
-#body > p a:hover {
-	color: #252525;
-}
-#body div div {
-	float: left;
-	margin: 0 10px;
 	padding: 0;
 }
-#body div .featured {
-	background: #fff;
-	border: 5px solid #5fb3bd;
-	border-radius: 4px;
-	min-height: 450px;
-	padding: 45px 15px 15px;
-	position: relative;
-	width: 420px;
+#navigation ul {
+	display: inline-block;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
-#body div .featured h2 {
+#navigation li {
+	float: left;
+	width: 160px;
 	text-align: center;
 }
-#body div .featured h3 {
-	color: #354057;
-	font-size: 20px;
-	font-weight: normal;
+#navigation li a {
+	color: #818181;
+	font-size: 15px;
+	line-height: 30px;
+	text-decoration: none;
+}
+#navigation li a:hover {
+	color: #000;
+}
+#navigation li.active a {
+	color: #f99600;
+}
+#adbox {
+	background: url(../images/bg-adbox.jpg) repeat-x left top;
+	height: 380px;
+	padding: 60px 0;
+}
+#adbox > div {
+	width: 800px;
+	margin: 0 auto;
+	padding: 0 80px;
+}
+#adbox > div img {
+	float: right;
+	margin-left: 60px;
+}
+#adbox h1, #adbox h2 {
+	color: #2c2c2c;
+	font-size: 60px;
+	line-height: 60px;
 	margin: 0;
-	padding: 10px 0 0;
+	text-transform: uppercase;
+}
+#adbox h2 {
+	font-size: 30px;
+	line-height: 36px;
 	text-transform: none;
 }
-#body div .featured img {
+#adbox p {
+	font-size: 16px;
+	line-height: 24px;
+	margin: 0;
+}
+#adbox p span {
 	display: block;
+	font-size: 12px;
+	width: 360px;
+	padding: 24px 0;
+	text-align: center;
+}
+#adbox p span b {
+	font-weight: normal;
+	display: block;
+	width: 256px;
+}
+/*------------------------------ CONTENTS ------------------------------*/
+#contents {
+	min-height: 510px;
+	width: 880px;
+	margin: 0 auto;
+	padding: 54px 40px;
+}
+h1 {
+	color: #3e3e3e;
+	font-size: 30px;
+	font-weight: normal;
+	line-height: 30px;
+	margin: 0 0 30px;
+}
+h2 {
+	color: #2c2c2c;
+	font-size: 24px;
+	font-weight: normal;
+	line-height: 24px;
+	margin: 0 0 12px;
+}
+p {
+	color: #585858;
+	font-size: 16px;
+	line-height: 24px;
+	margin: 0 0 30px;
+}
+p a {
+	color: #585858;
+}
+#tagline h1 {
+	margin-left: 20px;
+}
+#tagline > div {
 	float: left;
-	margin: 10px 30px 25px 0;
-	padding: 0;
+	width: 400px;
+	margin: 0 20px;
 }
-#body div .featured p {
-	clear: both;
-	color: #464646;
-	font-size: 12px;
-	line-height: 24px;
-	margin: 0 0 24px;
-	padding: 0;
+#contents .features {
+	width: 810px;
+	margin: 0 auto;
 }
-#body div .featured p a {
-	color: #464646;
-}
-#body div .featured p a:hover {
-	color: #252525;
-}
-#body div .section {
-	width: 460px;
-}
-#body div .section div {
-	background: #519194;
-	border: 5px solid #5fb3bd;
-	border-radius: 4px;
-	float: none;
-	margin: 0;
-	padding: 0 15px;
-	position: relative;
-}
-#body div .section .article {
-	height: 183px;
-	margin-bottom: 25px;
-	padding: 55px 15px 20px;
-	text-align: right;
-}
-#body div .section .article h2 {
-	text-align: left;
-}
-#body div .section .article h2 a {
-	background: url(../images/icons.png) no-repeat 0 10px;
+.features > div {
 	display: inline-block;
-	height: 40px;
-	margin: 0;
-	padding: 0;
-	text-indent: -99999px;
-	width: 31px;
+	margin: 0 0 30px;
 }
-#body div .section .article p {
-	color: #f5f5f5;
+.features > div img {
+	float: left;
+	margin-right: 20px;
+	margin-top: 36px;
+}
+.date {
+	float: left;
+	height: 78px;
+	width: 70px;
+	margin-right: 20px;
+	border: 1px solid #d5d5d5;
+	text-align: center;
+}
+.date p {
+	margin: 12px 0 0;
+}
+.date p span {
+	display: block;
+	font-size: 30px;
+	margin-bottom: 6px;
+}
+.author {
+	color: #585858;
+	display: block;
 	font-size: 12px;
-	line-height: 24px;
-	margin: 0;
-	padding: 20px 0px;
-	text-align: left;
 }
-#body div .section .article p a {
-	color: #f5f5f5;
-	text-decoration: underline;
-}
-#body div .section .article p a:hover {
-	color: #97d0d3;
-}
-#body div .section .article > a {
-	color: #f5f5f5;
-	font-size: 18px;
+.more {
+	background-color: #727272;
+	color: #fff;
+	display: inline-block;
+	font-size: 14px;
+	line-height: 30px;
+	width: 100px;
+	text-align: center;
 	text-decoration: none;
 }
-#body div .section .article > a:hover {
-	color: #97d0d3;
+.more:hover, .message input[type='submit']:hover {
+	background-color: #f99600;
+	color: #000;
 }
-#body div .section .newsletter {
-	height: 168px;
-	padding: 30px 15px 19px 214px;
+/** main **/
+.main {
+	float: left;
+	background: url(../images/divider.png) repeat-y right top;
+	min-height: 100px;
+	width: 620px;
+	padding-right: 24px;
+}
+.main h1, .sidebar h1 {
+	margin: 0 0 12px;
+	position: relative;
+	top: -18px;
+}
+.main h2 span {
+	display: block;
+	font-size: 12px;
+}
+/** sidebar **/
+.sidebar {
+	float: left;
+	min-height: 848px;
+	width: 216px;
+	margin-left: 20px;
+}
+.sidebar ul, .news {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+.news li {
+	border-top: 1px solid #d5d5d5;
+	padding: 24px 30px 0 100px;
 	position: relative;
 }
-#body div .section .newsletter img {
-	display: block;
-	left: 0;
-	margin: 0;
-	padding: 0;
+.news li .date {
+	float: none;
 	position: absolute;
-	top: -13px;
-	z-index: 5;
+	left: 0;
+	top: 30px;
 }
-#body div .section .newsletter p {
-	color: #f5f5f5;
-	font-size: 16px;
-	font-weight: bold;
-	letter-spacing: 0.03em;
-	line-height: 30px;
-	margin: 0;
-	padding: 0;
-}
-#body div .section .newsletter p span {
+.news li > p span, .post > span {
 	display: block;
+	text-align: right;
 }
-#body div .section .newsletter form {
-	margin: 0;
-	overflow: hidden;
-	padding: 0;
+.posts {
+	border-top: 1px solid #d5d5d5;
 }
-#body div .section .newsletter form span {
-	color: #f5f5f5;
-	clear: both;
-	display: block;
+.posts li {
+	border-bottom: 1px solid #d5d5d5;
+	padding: 24px 10px 0;
+}
+.posts li p {
 	font-size: 14px;
-	letter-spacing: 0.01em;
-	line-height: 30px;
-	margin: 0;
-	padding: 0 0 4px;
-	text-transform: capitalize;
-	text-shadow: 0 -1px 0 #285f62;
 }
-#body div .section .newsletter form input {
-	background: url(../images/interface.png) no-repeat;
-	border: 0;
-	display: block;
-	float: left;
-	height: 30px;
-	margin: 0;
-	padding: 0;
-}
-#body div .section .newsletter form #email {
-	background-position: -399px -72px;
-	color: #68a7aa;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	font-style: italic;
-	line-height: 30px;
-	padding: 0 5px;
-	text-align: center;
-	width: 130px;
-}
-#body div .section .newsletter form #send {
-	background-position: -399px -110px;
-	text-indent: -99999px;
-	width: 80px;
-}
-#body > .article {
-	margin: 0;
-	padding: 0;
-}
-#body > .article b {
-	color: #2f394e;
-	display: inline-block;
+.posts li .title {
+	font-size: 16px;
 	font-weight: normal;
-	margin: 0;
-	padding: 0 10px 15px;
-	text-transform: capitalize;
+	margin: 0 0 12px;
 }
-#body > .article p {
-	color: #464646;
+.posts li .title a {
+	color: #2c2c2c;
+	font-size: 16px;
+	text-decoration: none;
+}
+.post {
+	width: 785px;
+	margin: 0 auto;
+}
+.post h1 {
+	padding-top: 12px;
+}
+#about {
+	width: 740px;
+	margin: 0 auto;
+}
+#about h1, .section h1 {
+	border-bottom: 1px solid #e0e0e0;
+	padding-bottom: 12px;
+}
+.section {
+	float: left;
+	width: 390px;
+	margin-right: 50px;
+}
+.section h1 {
+	margin-bottom: 18px;
+}
+.message input[type='text'], .message textarea {
+	color: #aeaeae;
 	font-size: 13px;
-	line-height: 24px;
+	height: 33px;
+	line-height: 33px;
+	width: 380px;
+	border: 1px solid #d5d5d5;
+	margin: 0 0 6px;
+	padding: 0 4px;
+}
+.message textarea {
+	height: 175px;
+	overflow: auto;
+	resize: none;
+}
+.message input[type='submit'] {
+	float: right;
+	background-color: #818181;
+	color: #d5d5d5;
+	cursor: pointer;
+	font: 13px/30px Arial, Helvetica, sans-serif;
+	height: 30px;
+	border: 0;
 	margin: 0;
 	padding: 0 10px;
 }
-#body > .article p a {
-	color: #464646;
-	text-decoration: underline;
-}
-#body > .article p a:hover {
-	color: #252525;
-}
-#body > .article ul {
-	margin: 0;
-	padding: 30px 0 30px 10px;
-}
-#body > .article ul li {
-	color: #464646;
-	line-height: 24px;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-#body > .article ul li a {
-	color: #464646;
-	text-decoration: none;
-}
-#body > .article ul li a:hover {
-	color: #252525;
-}
-#body > .article h3 {
-	padding-bottom: 20px;
-}
-#body .blog {
-	padding: 0;
-}
-#body .content {
-	float: left;
-	margin: 0 35px 0 10px;
-	padding: 0;
-	width: 585px;
-}
-#body .content h3 {
-	padding-bottom: 25px;
-	padding-left: 0;
-}
-#body .content p {
-	color: #464646;
-	font-size: 13px;
-	line-height: 24px;
-	margin: 0;
-	padding: 0 0 24px;
-}
-#body .content p a {
-	color: #464646;
-	text-decoration: underline;
-}
-#body .content p a:hover {
-	color: #252525;
-}
-#body .sidebar {
-	background: url(../images/bg-sidebar.jpg) repeat-y top left;
-	float: right;
-	margin: 0 10px 82px 0;
-	padding: 0;
-	width: 320px;
-}
-#body .sidebar h3 {
-	background: url(../images/bg-sidebar-heading.jpg) no-repeat 0 0;
-	color: #2f394e;
-	font-family: 'Comfortaa-Regular';
-	font-size: 20px;
-	font-weight: normal;
-	letter-spacing: 0.1em;
-	margin: 0;
-	padding: 25px 10px;
+.contact {
+	background-color: #f8f8f8;
+	width: 270px;
+	padding: 124px 60px;
 	text-align: center;
-	text-transform: capitalize;
 }
-#body .sidebar ul {
-	background: url(../images/bg-sidebar-footer.jpg) no-repeat bottom left;
-	margin: 0;
-	padding: 0 20px 50px;
-}
-#body .sidebar ul li {
-	list-style: none;
-	margin: 0;
-	padding: 0 0 24px;
-}
-#body .sidebar ul li span {
-	color: #2f394e;
+.contact p span {
+	color: #2c2c2c;
 	display: block;
-	font-size: 16px;
-	font-weight: bold;
-	letter-spacing: 0.01em;
-	line-height: 24px;
-	margin: 0;
-	padding: 0;
+	font-size: 30px;
+	line-height: 36px;
+	padding: 18px 0;
 }
-#body .sidebar ul li span a {
-	color: #2f394e;
-	text-decoration: none;
-}
-#body .sidebar ul li span a:hover {
-	color: #4c8f97;
-}
-#body .sidebar ul li p {
-	color: #000;
-	font-size: 13px;
-	line-height: 24px;
-	margin: 0;
-	padding: 0;
-}
-#body .sidebar ul li p a {
-	color: #000;
-	text-decoration: underline;
-}
-#body .sidebar ul li p a:hover {
-	color: #4c8f97;
-}
-
-.err{
-    color: #FF0000;
-    text-decoration: underline;
-}
+/*------------------------------ FOOTER ------------------------------*/
 #footer {
-	background: #4c8f96;
-	border-top: 1px solid #9bd9e0;
-	margin: 0;
-	padding: 0;
+	background-color: #eee;
+	border-top: 1px solid #d8d8d8;
+	padding: 30px 0;
 }
-#footer > div {
-	margin: 0 auto;
-	padding: 30px 0 28px;
-	overflow: hidden;
-	text-align: center;
-	width: 960px;
-}
-#footer div p {
-	color: #ededed;
-	display: inline-block;
-	float: right;
+#footer p {
 	font-size: 12px;
-	letter-spacing: 0.05em;
-	margin: 0;
-	padding: 27px 0 0;
-	text-align: center;
+	line-height: 30px;
+	padding-left: 10px;
 }
-#footer div .connect {
-	background: #387a82;
+#connect {
 	float: right;
-	height: 18px;
-	margin: 0 20px 0 150px;
-	padding: 22px 20px;
-	overflow: hidden;
-	width: 144px;
-}
-#footer div .connect span {
-	color: #ededed;
 	display: inline-block;
-	float: left;
-	font-size: 12px;
-	height: 19px;
-	line-height: 21px;
-	margin: 0;
-	padding: 0 0 0 39px;
+	margin-right: 30px;
 }
-#footer div .connect a {
+#connect a {
 	background: url(../images/icons.png) no-repeat;
-	display: block;
-	float: left;
-	height: 20px;
-	margin: 0 8px;
-	padding: 0;
-	text-indent: -99999px;
-	width: 20px;
+	display: inline-block;
+	height: 30px;
+	width: 30px;
+	margin: 0 10px;
 }
-#footer div .connect #twitter {
-	background-position: 0 -32px;
+#connect a.googleplus {
+	background-position: 0 -40px;
 }
-#footer div .connect #twitter:hover {
-	background-position: -25px -32px;
+#connect a.twitter {
+	background-position: 0 -80px;
 }
-#footer div .connect #facebook {
-	background-position: 0 -57px;
+#connect a.tumbler {
+	background-position: 0 -120px;
 }
-#footer div .connect #facebook:hover {
-	background-position: -25px -57px;
+#connect a.facebook:hover {
+	background-position: -40px 0;
 }
-#footer div .connect #googleplus {
-	background-position: 0 -82px;
+#connect a.googleplus:hover {
+	background-position: -40px -40px;
 }
-#footer div .connect #googleplus:hover {
-	background-position: -25px -82px;
+#connect a.twitter:hover {
+	background-position: -40px -80px;
 }
-#footer div .connect #pinterest {
-	background-position: 0 -107px;
-}
-#footer div .connect #pinterest:hover {
-	background-position: -25px -107px;
+#connect a.tumbler:hover {
+	background-position: -40px -120px;
 }
