--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,21 @@
-/* Website template by freewebsitetemplates.com */
-@font-face {
-	font-family: 'OpenSans';
+
+/*@font-face {
+	font-family: 'Open Sans', sans-serif;
 	src: url('../fonts/OpenSans-Regular.eot');
 	src: local('☺'), url('../fonts/OpenSans-Regular.woff') format('woff'), url('../fonts/OpenSans-Regular.ttf') format('truetype'), url('../fonts/OpenSans-Regular.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
-	font-family: 'Play';
+	font-family: 'Roboto', sans-serif;
 	src: url('../fonts/Play-Regular.eot');
 	src: local('☺'), url('../fonts/Play-Regular.woff') format('woff'), url('../fonts/Play-Regular.ttf') format('truetype'), url('../fonts/Play-Regular.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
-}
+}*/
 body {
 	background-color: #fff;
-	font-family: 'OpenSans';
+	font-family: 'Open Sans', sans-serif;
 	margin: 0;
 }
 img {
@@ -34,7 +34,7 @@ img {
 	background-position: 0 -70px;
 	color: #fff;
 	display: inline-block;
-	font: 24px/60px 'OpenSans';
+	font: 24px/60px 'Open Sans', sans-serif;
 	height: 60px;
 	width: 230px;
 	text-align: center;
@@ -46,7 +46,7 @@ img {
 }
 /*------------------------------ HEADER ------------------------------*/
 #header {
-	background-color: #eee;
+	background-color: #660033;
 	border-bottom: 1px solid #e6e6e6;
 	padding: 27px 0;
 }
@@ -61,14 +61,15 @@ img {
 	margin-right: 20px;
 }
 #header .logo a {
-	background: url(../images/logo.png) no-repeat center top;
-	color: #000;
+	background: url(../images/logo_resized.png) no-repeat left top;
+	color: #FFFFFF;
 	display: block;
-	font: 15px/30px 'Play';
-	height: 20px;
-	width: 76px;
-	padding-top: 68px;
+	font: 45px/30px 'Roboto', sans-serif;
+	height: 80px;
+	width: 100px;
+	padding-top: 80px;
 	text-decoration: none;
+        font-weight: bold;
 	text-transform: uppercase;
 }
 /** Navigation **/
@@ -100,7 +101,7 @@ img {
 	color: #000;
 }
 #navigation li.active a {
-	color: #f99600;
+	color: #c80064;
 }
 #adbox {
 	background: url(../images/bg-adbox.jpg) repeat-x left top;
@@ -359,7 +360,7 @@ p a {
 }
 /*------------------------------ FOOTER ------------------------------*/
 #footer {
-	background-color: #eee;
+	background-color: #660033;
 	border-top: 1px solid #d8d8d8;
 	padding: 30px 0;
 }
